# kollect-ip-protocol

./: Anchor.toml  Cargo.toml  README.md  SKILL.md  package.json
programs/kollect/: Cargo.toml
programs/kollect/src/: error.rs  events.rs  lib.rs
programs/kollect/src/constants/: mod.rs
programs/kollect/src/instructions/: mod.rs
programs/kollect/src/instructions/entity/: initialize_entity_treasury.rs  mod.rs  withdraw_entity_earnings.rs  withdraw_ip_treasury.rs
programs/kollect/src/instructions/ip/: deactivate_ip.rs  mod.rs  onboard_ip.rs  reactivate_ip.rs  update_ip_config.rs
programs/kollect/src/instructions/licensing/: create_license.rs  create_license_template.rs  create_royalty_policy.rs  mod.rs  purchase_license.rs  update_license.rs  update_license_template.rs  update_royalty_policy.rs  validate_derivative_grant.rs
programs/kollect/src/instructions/platform/: initialize_platform.rs  mod.rs  update_platform_config.rs  withdraw_platform_fees.rs
programs/kollect/src/instructions/playback/: mod.rs  settle_period.rs  submit_playback.rs
programs/kollect/src/instructions/venue/: deactivate_venue.rs  mod.rs  reactivate_venue.rs  register_venue.rs  update_venue.rs  update_venue_multiplier.rs
programs/kollect/src/state/: entity_treasury.rs  ip_config.rs  ip_treasury.rs  license.rs  license_grant.rs  license_template.rs  mod.rs  platform_config.rs  platform_treasury.rs  playback_commitment.rs  royalty_policy.rs  royalty_split.rs  settlement_record.rs  template_config.rs  venue_account.rs
programs/kollect/src/utils/: mod.rs  seeds.rs  validation.rs
(+93 files in other folders)
