[package]
name = "kollect"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kollect"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
  "ip-core/idl-build"
]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
ip-core = { path = "../ip_core", features = ["no-entrypoint"] }
solana-sha256-hasher = "2.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))'
] }
